--- a/header.css
+++ b/header.css
@@ -6,12 +6,21 @@
     background-repeat: no-repeat;
     background-position: center;
 }
-.cabeçalho {
+.cabecalho {
     background-color: var(--branco);
-}
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+  }
 .container__imagem {
     padding: 1em;
 }
 .lista-menu {
     display: none;
+    position: absolute;
+    top: 100%;
+  }
+  .container__botao:checked ~ .lista-menu {
+    display: block;
   }
