--- a/header.css
+++ b/header.css
@@ -6,6 +6,7 @@
     background-repeat: no-repeat;
     background-position: center;
 }
+
 .cabecalho {
     background-color: var(--branco);
     display: flex;
@@ -13,14 +14,23 @@
     align-items: center;
     position: relative;
   }
+
 .container__imagem {
     padding: 1em;
 }
+
 .lista-menu {
     display: none;
     position: absolute;
     top: 100%;
   }
+
   .container__botao:checked ~ .lista-menu {
     display: block;
   }
+
+  .lista-menu__titulo,
+.lista-menu__item {
+  padding: 1em;
+  background-color: var(--branco);
+}
