--- a/header.css
+++ b/header.css
@@ -20,10 +20,11 @@
 }
 
 .lista-menu {
-    display: none;
-    position: absolute;
-    top: 100%;
-  }
+  display: none;
+  position: absolute;
+  top: 100%;
+  width: 60vw;
+}
 
   .container__botao:checked ~ .lista-menu {
     display: block;
@@ -33,4 +34,15 @@
 .lista-menu__item {
   padding: 1em;
   background-color: var(--branco);
+}
+.lista-menu__titulo {
+  color: var(--laranja);
+}
+
+.lista-menu__link {
+  background: var(--azul-degrade);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  text-transform: uppercase;
 }
