--- a/styles/header.css
+++ b/styles/header.css
@@ -33,18 +33,20 @@
   padding: 1em;
 }
 
-  .container__botao:checked ~ .lista-menu {
-    display: block;
-  }
+.container__botao {
+  display: none;
+}
 
   .lista-menu__titulo,
 .lista-menu__item {
   padding: 1em;
-  background-color: var(--branco);
+ background-color: var(--branco);
 }
-.lista-menu__titulo {
-  color: var(--laranja);
-}
+
+  .lista-menu__titulo {
+    color: var(--laranja);
+    font-weight: 700;
+  }
 
 .lista-menu__link {
   background: var(--azul-degrade);
