--- a/styles/header.css
+++ b/styles/header.css
@@ -55,3 +55,6 @@
   background-clip: text;
   text-transform: uppercase;
 }
+@media screen and (min-width: 1024px) {
+  /* Estilos para tablets */
+}
