--- a/styles/header.css
+++ b/styles/header.css
@@ -56,5 +56,21 @@
   text-transform: uppercase;
 }
 @media screen and (min-width: 1024px) {
-  /* Estilos para tablets */
-}
+  .container__titulo,
+  .container__titulo--negrito {
+    font-family: var(--fonte-secundario);
+    font-size: 30px;
+  }
+
+    .container__titulo {
+      font-weight: 400;
+      display: block;
+    }
+  }
+
+  .container__titulo--negrito {
+    font-weight: 700;
+  }
+  .container__titulo {
+    display: none;
+  }
